--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "JuliaLSODA"
 uuid = "19dae3e6-e804-480b-b295-781daaea7dc0"
-authors = [""]
+authors = ["Junpeng <1025946044@qq.com>", "Yingbo Ma <mayingbo5@gmail.com>"]
 version = "0.1.0"
 
 [deps]
@@ -9,3 +9,10 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
